
[package]
name = "neu"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = { version = "0.32", features = ["serde-serialize"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
csv = "1.1"
